update to advise installing latest adoptium JVM