@@ -2,7 +2,7 @@
 <!-- You may freely edit this file. See commented blocks below for -->
 <!-- some examples of how to customize the build. -->
 <!-- (If you delete it and reopen the project it will be recreated.) -->
-<project name="jaer" default="default" basedir="." xmlns:ivy="antlib:org.apache.ivy.ant" xmlns:j2seproject3="http://www.netbeans.org/ns/j2se-project/3">
+<project name="jaer" default="default" basedir="." xmlns:ivy="antlib:org.apache.ivy.ant" xmlns:j2seproject1="http://www.netbeans.org/ns/j2se-project/1" xmlns:j2seproject3="http://www.netbeans.org/ns/j2se-project/3">
     
 
     <target depends="jar" description="Build jar.jar for all jAER classes." name="default"/>
@@ -113,6 +113,25 @@
          libusb here so developers do not hit the missing-dylib dialog. Skip with
          -Dskip.macos.libusb=true to test that dialog. Quiet on other OSes. -->
     <target name="-post-init" depends="install-macos-libusb">
+    </target>
+
+    <!-- run.jvmargs uses -XX:+UseCompactObjectHeaders (JEP 519). Do not wrap the
+         NetBeans <java> task to parse "Unrecognized VM option"; fail before launch. -->
+    <target name="-check-runtime-jvm">
+        <condition property="jaer.jvm.ok.for.run">
+            <javaversion atleast="25"/>
+        </condition>
+        <fail unless="jaer.jvm.ok.for.run">This JVM (${java.version}) does not support -XX:+UseCompactObjectHeaders (needs JDK 25+).
+Install the latest Eclipse Temurin JDK from https://adoptium.net/
+and put it on PATH (or set JAVA_HOME).</fail>
+    </target>
+
+    <target depends="-check-runtime-jvm,init,compile" description="Run a main class." name="run">
+        <j2seproject1:java>
+            <customize>
+                <arg line="${application.args}"/>
+            </customize>
+        </j2seproject1:java>
     </target>
 
     <target name="-post-compile">
